--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -6,3 +6,34 @@
   justify-content: center;
   align-items: center;
 }
+
+table,
+tr,
+th,
+td {
+  border-collapse: collapse;
+  border: 2px solid white;
+  padding: 0.5em;
+}
+
+.publishBtn {
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.publishBtn svg {
+  transition: stroke 300ms ease-in;
+}
+
+.publishBtn svg:hover {
+  stroke: rgb(14, 228, 24);
+}
+
+.publishBtn svg:active {
+  stroke: rgb(7, 59, 6);
+}
